Adjust logo image

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<h8 class="fragment fade-in-then-semi-out">Mobile and Gesture Based Drag and Drop</h8><br/>
 				</section>
 
-				<section data-transition="slow" data-background-image="img/VD2020LogoUpperRight.png">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h3>Get the Presentation link</h3>	
 					<img src="img/lwc_dnd_20qr.png"  style="border:none;" height="50%" width="50%" align="center" />
 					<div >
@@ -148,7 +148,7 @@
 					<h3>What is Drag and Drop?</h3>
 				</section>
 
-				<section data-transition="slide-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h3>drag and drop</h3>
 					<h6><i>noun</i></h6> 
 					<p><i>a programmatic mechanism whereby a<br/>
@@ -176,7 +176,7 @@
 					<h3>It's Visual Magic!</h3>
 				</section>
 
-				<section> 
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png"> 
 
 					<table>
 
@@ -414,7 +414,7 @@
 					<h3>Demo Visualforce...</h3> 
 				</section>
 
-				<section data-transition="slide-in fade-out" >
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png" >
 					<h3>How do you implement<br/>
 						HTML Drag and Drop in<br/>
 						Lightning Web Components
@@ -432,7 +432,7 @@
 					<h8 class="fragment fade-in-then-semi-out"><i>(LWC avoids standard DOM Manipulation!)</i></h8><br/>
 				</section>
 
-				<section data-transition="slide-in fade-out" >
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png" >
 					<h3>What do the<br/>
 						components look like?</h3> 
 				</section>
@@ -466,12 +466,12 @@
 					</table>
 				</section>		
 
-				<section data-transition="slide-in fade-out" >
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png" >
 					<h4>Tightly Coupled Components</h4> 
 					<img src="img/CasePicker2.png" />	
 				</section>
 
-				<section data-transition="slide-in fade-out" >
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Loosley Coupled Components</h4> 
 					<img src="img/CasePicker3.png" width="80%"/>	
 				</section>
@@ -530,7 +530,7 @@
 					<img src="img/case-picker-JS-header.png" width="60%" />
 				</section>
 
-				<section data-transition="slide-in fade-out" >
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h3>Demo LWC...</h3> 
 				</section>
 
@@ -549,7 +549,7 @@
 					<h3>Where Can I Learn More?</h3>
 				</section>
 
-				<section data-transition="fade-in fade-out">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://github.com/forcementor/lwc-dnd-demos" target="_none"> 						
 						<img src="img/GitRepo.png" width="80%"/>
 					</a>
@@ -565,7 +565,7 @@
 					<h4>HTML Fundamentals</h4>
 				</section>
 
-				<section data-transition="fade-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://medium.com/@jacobwarduk/how-to-correctly-use-preventdefault-stoppropagation-or-return-false-on-events-6c4e3f31aedb" target="_none"> 
 						<img src="img/MediumWard.png" style="border:none;" width="60%"/>
 					</a>
@@ -573,7 +573,7 @@
 					<h4>Correctly Short-Stopping Events</h4>
 				</section>
 
-				<section data-transition="fade-in fade-out" >
+				<section data-transition="fade-in fade-out"  data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_none"> 
 						<img src="img/MDNContent.png" style="border:none;" />
 					</a>
@@ -581,7 +581,7 @@
 					<h4>Mozilla Developer Network</h4>
 				</section>
 				
-				<section data-transition="fade-in fade-out" data-background-image="img/ForcelandiaLogoUpperRight.jpg">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://pluralsight.pxf.io/C0066" target="_none"> 						
 						<img src="img/ChuckPbP.png" style="border:none;" />
 					</a>
@@ -589,28 +589,28 @@
 					<h4>A Lightning Web Components Primer</h4>
 				</section>
 
-				<section data-transition="fade-in fade-out">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPSite.png" width="80%"/>
 					</a>
 					<br/>							
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
-				<section data-transition="fade-in fade-out">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPSiteCallout.png" width="80%"/>
 					</a>
 					<br/>							
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
-				<section data-transition="fade-in fade-out">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPTiles.png" width="60%"/>
 					</a>
 					<br/>							
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
-				<section data-transition="fade-in fade-out">
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPTilesCallout.png" width="60%"/>
 					</a>
@@ -618,7 +618,7 @@
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
 
-				<section style="text-align: left;" data-background-image="img/ForcelandiaBackground.jpg" data-transition="slow">
+				<section style="text-align: left;" data-background-image="img/VD2020LogoUpperRight.png" data-transition="slow">
 					<h4 style="color:White">Next Steps:</h4>
 					<ul style="color:White">
 						<li>Visit our sponsors!</li>
