Tweak drop effects again

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 					<h8 class="fragment fade-in-then-semi-out">Short-Stop Default Behavior and Bubbling</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Captures the element Id of the Dragged Element</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Captures the element Id of the Source Container</h8><br/>					
-					<h8 class="fragment fade-in-then-semi-out">Loads the Data and Drop Effects in the Event DTO Payload</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Loads the Data and Drop Effects in the Event DTO</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Changes the element's CSS presentation</h8><br/>									
 				</section>
 
