Adjust images and sections

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					<h8 class="fragment fade-in-then-semi-out">User "Drags" it across the screen</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">User "Drops" it somewhere else on the screen</h8><br/>										
 					<h8 class="fragment fade-in-then-semi-out">The element appears at the new location</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Some associated logic may execute affecting data</h8><br/>															
+					<h8 class="fragment fade-in-then-semi-out">Associated logic may affect data</h8><br/>															
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -281,7 +281,6 @@
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag Start event</h3>
-					<h8 class="fragment fade-in-then-semi-out">Short-Stop Default Behavior and Bubbling</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Captures the element Id of the Dragged Element</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Captures the element Id of the Source Container</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Loads the Data and Drop Effects in the Event DTO</h8><br/>					
@@ -291,14 +290,12 @@
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag event</h3>
-					<h8 class="fragment fade-in-then-semi-out">Short-Stop Default Behavior and Bubbling</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Affects the Dragged Element's CSS presentation</h8><br/>									
 				</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
-					<h3>The Drag Stop event</h3>
-					<h8 class="fragment fade-in-then-semi-out">Short-Stop Default Behavior and Bubbling</h8><br/>									
+					<h3>The Drag End event</h3>
 					<h8 class="fragment fade-in-then-semi-out">Resets the Dragged Element's CSS presentation</h8><br/>									
 				</section>
 
@@ -319,7 +316,6 @@
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drag Leave event</h3>
-					<h8 class="fragment fade-in-then-semi-out">Short-Stop Default Behavior and Bubbling</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Resets the Target Container's CSS presentation</h8><br/>									
 				</section>
 
@@ -330,12 +326,6 @@
 					<h8 class="fragment fade-in-then-semi-out">Processes DOM changes to the Dragged element</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Processes any required data</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Resets the Target Container's CSS presentation</h8><br/>									
-				</section>
-
-				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<h3>Additional Consideration</h3>
-					<h8 class="fragment fade-in-then-semi-out">Set/Get Data Transfer Object payload</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Set Drop Effects To Control Drop Rules</h8><br/>
 				</section>
 
 				<!-- SALESFORCE -->	
@@ -353,12 +343,14 @@
 				</section>
 
 				<!-- Callout transition-->
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Element<br/>
 						(in the 'New' source container)		
 					</h4> 
 					<img src="img/html1.png" />
 				</section>
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Element<br/>
 						(in the 'New' source container)		
@@ -367,11 +359,13 @@
 				</section>
 
 				<!-- Callout transition-->				
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Working' container)</h4> 
 					<img src="img/html2.png" />	
 				</section>
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Working' container)</h4> 
@@ -379,32 +373,36 @@
 				</section>
 
 				<!-- Callout transition-->				
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Escalted' container)</h4> 
 					<img src="img/html3.png" />	
 				</section>
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
 						(the 'Escalted' container)</h4> 
 					<img src="img/html3callout.png" />	
 				</section>
 
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Setting Up The Event Listeners</h4> 
 					<img height="75%" width="75%" src="img/htmlHandlerJS.png" />	
 				</section>
-
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Setting Up The Event Listeners</h4> 
 					<img height="75%" width="75%" src="img/htmlHandlerJSCallout.png" />	
 				</section>
 
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Drop Event Handler</h4> 
 					<img height="75%" width="75%" src="img/htmlDropJS.png" />	
 				</section>
-
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Drop Event Handler</h4> 
 					<img height="75%" width="75%" src="img/htmlDropJSCallout.png" />	
@@ -423,19 +421,21 @@
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>LWC vs Standard HTML Differences</h4>
-					<h8 class="fragment fade-in-then-semi-out">Both Manipulate the DOM but...</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">LWC encapsulation requires a Hybrid Approach</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Custom Event Messaging Payload</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Abandons Event DTO and Drop Effects</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Both Manipulate the DOM but Differently</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">LWC requires brokering the events</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">Abandon the Event DTO and Drop Effects</h8><br/>					
+					<h8 class="fragment fade-in-then-semi-out">Use Custom Event Data Payload</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Facilitates Data Manipulation</h8><br/>
-					<h8 class="fragment fade-in-then-semi-out">Uses Data Driven Reactive Rendering</h8><br/>
+					<h8 class="fragment fade-in-then-semi-out">Leverage Data Driven Reactive Rendering</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out"><i>(LWC avoids standard DOM Manipulation!)</i></h8><br/>
 				</section>
 
+				<!--
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png" >
 					<h3>What do the<br/>
 						components look like?</h3> 
 				</section>
+				-->
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Two Architectural Approaches</h4>
@@ -477,37 +477,81 @@
 				</section>
 
 				<!-- DRAGGABLE COMPONENT -->
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Markup<br/>
 						(caseItem.html)</h4> 
 					</h4> 
-					<img src="img/case-item-HTML.png" />
+					<img src="img/case-item-HTML.png" draggable="false" />
 				</section>
+				-->
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Draggable Component: Markup<br/>
+						(caseItem.html)</h4> 
+					</h4> 
+					<img src="img/case-item-HTMLCallout.png" draggable="false" />
+				</section>
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Module<br/>
 						(caseItem.js)</h4> 
 					</h4> 
-					<img src="img/case-item-JS-dragstart.png" width="80%" />
+					<img src="img/case-item-JS-dragstart.png"  draggable="false" width="80%" />
+				</section>
+				-->
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Draggable Component: Module<br/>
+						(caseItem.js)</h4> 
+					</h4> 
+					<img src="img/case-item-JS-dragstartCallout.png"  draggable="false" width="80%" />
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Style<br/>
 						(caseItem.css)</h4> 
 					</h4> 
-					<img src="img/case-item-CSS.png" />
+					<img src="img/case-item-CSSCallout.png" draggable="false" />
 				</section>
 
 				<!-- CONTAINER COMPONENT -->
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Markup<br/>
 						(caseList.html)</h4> 
 					</h4> 
 					<img src="img/case-list-HTML.png"  width="60%"/>
 				</section>
+				-->
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Container Component: Markup<br/>
+						(caseList.html)</h4> 
+					</h4> 
+					<img src="img/case-list-HTMLcallout.png"  width="60%"/>
+				</section>
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Container Component: Module<br/>
+						(caseList.js)</h4> 
+					</h4> 
+					<img src="img/case-list-js-OverLeaveCallout.png" width="80%" />
+				</section>
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Container Component: Module<br/>
+						(caseList.js)</h4> 
+					</h4> 
+					<img src="img/case-list-js-AddRemoveCallout.png" width="80%" />
+				</section>
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Module<br/>
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-JS-drop.png" width="80%" />
+				</section>
+				-->
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Container Component: Module<br/>
+						(caseList.js)</h4> 
+					</h4> 
+					<img src="img/case-list-JS-dropCallout.png" width="80%" />
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Style<br/>
@@ -521,7 +565,7 @@
 					<h4>Master Component: Markup<br/>
 						(casePicker.html)</h4> 
 					</h4> 
-					<img src="img/case-picker-HTML.png"  width="60%"/>
+					<img src="img/case-picker-HTMLCallout.png"  width="80%"/>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Master Component: Module<br/>
@@ -589,6 +633,7 @@
 					<h4>A Lightning Web Components Primer</h4>
 				</section>
 
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPSite.png" width="80%"/>
@@ -596,6 +641,7 @@
 					<br/>							
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPSiteCallout.png" width="80%"/>
@@ -603,6 +649,7 @@
 					<br/>							
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
+				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPTiles.png" width="60%"/>
@@ -610,6 +657,7 @@
 					<br/>							
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
+				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<a href="https://www.sfplaybyplay.com" target="_none"> 						
 						<img src="img/PbPTilesCallout.png" width="60%"/>
@@ -681,6 +729,8 @@
 					46: function() { RevealChalkboard.clear() },	// clear chalkboard when 'DEL' is pressed
 					 8: function() { RevealChalkboard.reset() },	// reset chalkboard data on current slide when 'BACKSPACE' is pressed
 					68: function() { RevealChalkboard.download() },	// downlad recorded chalkboard drawing when 'd' is pressed
+					88: function() { RevealChalkboard.colorNext() },	// cycle colors forward when 'x' is pressed
+					89: function() { RevealChalkboard.colorPrev() },	// cycle colors backward when 'y' is pressed
 				},
 
 			});
