--- a/index.html
+++ b/index.html
@@ -376,13 +376,13 @@
 				<!--
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
-						(the 'Escalted' container)</h4> 
+						(the 'Escalated' container)</h4> 
 					<img src="img/html3.png" />	
 				</section>
 				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Potential Drop Target Container<br/>
-						(the 'Escalted' container)</h4> 
+						(the 'Escalated' container)</h4> 
 					<img src="img/html3callout.png" />	
 				</section>
 
