--- a/index.html
+++ b/index.html
@@ -594,9 +594,18 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<a href="https://github.com/forcementor/lwc-dnd-demos" target="_none"> 						
-						<img src="img/GitRepo.png" width="80%"/>
-					</a>
+					<table>
+						<tr>
+							<td width="70%">
+								<a href="https://github.com/forcementor/lwc-dnd-demos" target="_none"> 						
+									<img src="img/GitRepo.png" style="vertical-align:middle;" />
+								</a>
+							</td>
+							<td width="30%" >
+								<img src="img/GitDemo_QR.png" style="vertical-align:middle" />
+							</td>
+						</tr>
+					</table>	
 					<br/>							
 					<h4>https://github.com/forcementor/lwc-dnd-demos</h4>
 				</section>
@@ -643,10 +652,18 @@
 				</section>
 				-->
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<a href="https://www.sfplaybyplay.com" target="_none"> 						
-						<img src="img/PbPSiteCallout.png" width="80%"/>
-					</a>
-					<br/>							
+					<table>
+						<tr>
+							<td width="70%">
+								<a href="https://www.sfplaybyplay.com" target="_none"> 						
+									<img src="img/PbPSiteCallout.png" style="vertical-align:middle;" />
+								</a>
+							</td>
+							<td width="30%" >
+								<img src="img/PbP_QR.png" style="vertical-align:middle" />
+							</td>
+						</tr>
+					</table>		
 					<h4>www.sfplaybyplay.com</h4>
 				</section>
 				<!--
