--- a/index.html
+++ b/index.html
@@ -341,6 +341,11 @@
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>HTML Multiple Containers</h4> 
+					<img src="img/htmlDivs.png" width="70%"/>
+				</section>
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Element<br/>
 						(in the 'New' source container)		
 					</h4> 
@@ -394,6 +399,17 @@
 					<h8 class="fragment fade-in-then-semi-out">Facilitates Data Manipulation...</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Use Data Driven Reactive Rendering</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out"><i>(LWC avoids standard DOM Manipulation!)</i></h8><br/>
+				</section>
+
+				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h3>Key Point</h3>
+					<p><i>We leverage Drag and Drop events<br/>
+						brokered with Custom Events to send<br/>
+						messages up a component hierarchy to<br/>
+						a top level master component that<br/>
+						manages all data fetches and updates<br/>
+						that trigger reactive rerendering.<br/>
+					</i></p>	
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
