--- a/index.html
+++ b/index.html
@@ -514,7 +514,19 @@
 					<h4>Master Component: Module<br/>
 						(casePicker.js)</h4> 
 					</h4> 
-					<img src="img/case-picker-JS-header.png" width="60%" />
+					<img src="img/case-picker-JS-header.png" width="70%" />
+				</section>
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Master Component: Module<br/>
+						(casePicker.js)</h4> 
+					</h4> 
+					<img src="img/case-picker-JS-wire.png" width="70%" />
+				</section>
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Master Component: Module<br/>
+						(casePicker.js)</h4> 
+					</h4> 
+					<img src="img/case-picker-JS-update.png" width="70%" />
 				</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
