Add code for all important events

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 						messages up a component hierarchy to<br/>
 						a top level master component that<br/>
 						manages all data fetches and updates<br/>
-						that trigger reactive rerendering.<br/>
+						which trigger reactive rerendering.<br/>
 					</i></p>	
 				</section>
 
@@ -456,19 +456,19 @@
 					<h4>Draggable Component: Markup<br/>
 						(caseItem.html)</h4> 
 					</h4> 
-					<img src="img/case-item-HTMLCallout.png" draggable="false" />
+					<img src="img/case-item-HTMLCallout.png" draggable="false" width="50%"/>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Module<br/>
 						(caseItem.js)</h4> 
 					</h4> 
-					<img src="img/case-item-JS-dragstartCallout.png"  draggable="false" width="80%" />
+					<img src="img/case-item-JS-dragstartCallout.png"  draggable="false" width="70%" />
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Style<br/>
 						(caseItem.css)</h4> 
 					</h4> 
-					<img src="img/case-item-CSSCallout.png" draggable="false" />
+					<img src="img/case-item-CSSCallout.png" draggable="false" width="40%"/>
 				</section>
 
 				<!-- CONTAINER COMPONENT -->
@@ -478,24 +478,35 @@
 					</h4> 
 					<img src="img/case-list-HTMLCallout.png"  width="60%"/>
 				</section>
+
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Module<br/>
 						(caseList.js)</h4> 
 					</h4> 
-					<img src="img/case-list-js-OverLeaveCallout.png" width="80%" />
+					<img src="img/case-list-js-OverLeaveCallout.png" width="70%" />
 				</section>
+
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Module<br/>
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-js-AddRemoveCallout.png" width="80%" />
 				</section>
+
+				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
+					<h4>Container Component: Module<br/>
+						(caseList.js)</h4> 
+					</h4> 
+					<img src="img/case-list-JS-itemdrag.png" width="80%" />
+				</section>
+
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Module<br/>
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-JS-dropCallout.png" width="80%" />
 				</section>
+
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Container Component: Style<br/>
 						(caseList.css)</h4> 
