--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
 							<td width="50%">
 								<div class="fragment fade-in">
 									<h4><u>Draggable Element</u></h4>
-									<h8 class="fragment fade-in-then-semi-out">Drag Start</h8><br/>
+									<h8 class="fragment fade-in-then-semi-out">DragStart</h8><br/>
 									<h8 class="fragment fade-in-then-semi-out">Drag</h8><br/>																		
-									<h8 class="fragment fade-in-then-semi-out">Drag End</h8><br/>									
+									<h8 class="fragment fade-in-then-semi-out">DragEnd</h8><br/>									
 								</div>
 							</td>
 							<td width="50%">
 								<div class="fragment fade-in">
 									<h4><u>Target Container</u></h4>
-									<h8 class="fragment fade-in-then-semi-out">Drag Enter</h8><br/>
-									<h8 class="fragment fade-in-then-semi-out">Drag Over</h8><br/>									
-									<h8 class="fragment fade-in-then-semi-out">Drag Leave</h8><br/>																		
+									<h8 class="fragment fade-in-then-semi-out">DragEnter</h8><br/>
+									<h8 class="fragment fade-in-then-semi-out">DragOver</h8><br/>									
+									<h8 class="fragment fade-in-then-semi-out">DragLeave</h8><br/>																		
 									<h8 class="fragment fade-in-then-semi-out">Drop</h8><br/>																		
 								</div>
 							</td>
@@ -271,7 +271,8 @@
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
-					<h3>The Drag Start event</h3>
+					<h3>The DragStart event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires when an element is first dragged</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is REQUIRED</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Captures the element Id of the Dragged Element</h8><br/>
 					<h8 class="fragment fade-in-then-semi-out">Captures the element Id of the Source Container</h8><br/>					
@@ -282,20 +283,23 @@
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
 					<h3>The Drag event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires as an element is being dragged</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is OPTIONAL</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Typically used to affect the CSS presentation</h8><br/>									
 				</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Draggable Element)</i></h4>
-					<h3>The Drag End event</h3>
+					<h3>The DragEnd event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires as a drag operation ends</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is OPTIONAL</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Typically used to reset the CSS presentation</h8><br/>									
 				</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
-					<h3>The Drag Enter event</h3>
+					<h3>The DragEnter event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires as item enters a valid drop target</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is REQUIRED</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">The handler MUST call preventDefault()</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Typically used to reset the CSS presentation</h8><br/>									
@@ -303,7 +307,8 @@
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
-					<h3>The Drag Over event</h3>
+					<h3>The DragOver event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires as item is being dragged over a valid drop target</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is REQUIRED</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">The handler SHOULD call preventDefault()</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Typically used to reset the CSS presentation</h8><br/>									
@@ -311,7 +316,8 @@
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
-					<h3>The Drag Leave event</h3>
+					<h3>The DragLeave event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires as item leaves a valid drop target</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is OPTIONAL</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Typically used to reset the CSS presentation</h8><br/>									
 				</section>
@@ -319,6 +325,7 @@
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4><i>(Target Container)</i></h4>
 					<h3>The Drop event</h3>
+					<h8 class="fragment fade-in-then-semi-out">Fires as item is dropped on a valid drop target</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">Handling this event is REQUIRED</h8><br/>					
 					<h8 class="fragment fade-in-then-semi-out">The handler SHOULD call preventDefault()</h8><br/>									
 					<h8 class="fragment fade-in-then-semi-out">Processes DOM changes to the Dragged element</h8><br/>									
