Key point adjustment

--- a/index.html
+++ b/index.html
@@ -409,14 +409,22 @@
 				</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
-					<h3>Key Point</h3>
-					<p><i>We leverage Drag and Drop events<br/>
-						brokered with Custom Events to send<br/>
-						messages up a component hierarchy to<br/>
-						a top level master component that<br/>
-						manages all data fetches and updates<br/>
-						which trigger reactive rerendering.<br/>
-					</i></p>	
+					<h3>Key Points</h3>
+					<i>
+						<p class="fragment fade-in-then-semi-out">
+							LWCs leverage Drag and Drop events<br/>
+							and broker with Custom Events.
+						</p>
+						<p class="fragment fade-in-then-semi-out">
+							These messages travel up a component<br/>
+							hierarchy to a top level master component.
+						</p>
+						<p class="fragment fade-in-then-semi-out">
+							It manages all data fetches and updates,<br/>
+							which trigger reactive rerendering back<br/>
+							down through the hierarchy.
+						</p>
+					</i>	
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
