--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 					<h4>Master Component: Module<br/>
 						(casePicker.js)</h4> 
 					</h4> 
-					<img src="img/case-picker-JS-wire.png" width="70%" />
+					<img src="img/case-picker-JS-datawire.png" width="70%" />
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Master Component: Module<br/>
