Label the LWC code slides

--- a/index.html
+++ b/index.html
@@ -478,12 +478,16 @@
 						(caseItem.js)</h4> 
 					</h4> 
 					<img src="img/case-item-JS-dragstartCallout.png"  draggable="false" width="70%" />
+					</br>
+					<h8>DragStart Event Handler</h8>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Style<br/>
 						(caseItem.css)</h4> 
 					</h4> 
 					<img src="img/case-item-CSSCallout.png" draggable="false" width="40%"/>
+					</br>
+					<h8>Define the Drag style</h8>
 				</section>
 
 				<!-- CONTAINER COMPONENT -->
@@ -492,6 +496,8 @@
 						(caseList.html)</h4> 
 					</h4> 
 					<img src="img/case-list-HTMLCallout.png"  width="60%"/>
+					</br>
+					<h8>Wire up both Container and Item events</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -499,6 +505,8 @@
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-js-OverLeaveCallout.png" width="70%" />
+					</br>
+					<h8>Handle events that change Container style</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -506,6 +514,8 @@
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-js-AddRemoveCallout.png" width="80%" />
+					</br>
+					<h8>Module helper functions for setting Style</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -513,6 +523,8 @@
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-JS-itemdrag.png" width="80%" />
+					</br>
+					<h8>Broker the Item's DragStart event</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -520,6 +532,8 @@
 						(caseList.js)</h4> 
 					</h4> 
 					<img src="img/case-list-JS-dropCallout.png" width="80%" />
+					</br>
+					<h8>Raise the Container's Drop event</h8>
 				</section>
 
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
@@ -527,6 +541,8 @@
 						(caseList.css)</h4> 
 					</h4> 
 					<img src="img/case-list-CSS.png" />
+					</br>
+					<h8>Define the Container's DragOver style</h8>
 				</section>
 
 				<!-- MASTER COMPONENT -->
@@ -535,25 +551,33 @@
 						(casePicker.html)</h4> 
 					</h4> 
 					<img src="img/case-picker-HTMLCallout.png"  width="80%"/>
+					</br>
+					<h8>Wire the Container events to the Master</h8>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Master Component: Module<br/>
 						(casePicker.js)</h4> 
 					</h4> 
 					<img src="img/case-picker-JS-header.png" width="70%" />
+					</br>
+					<h8>Declare Apex and RecordUI imports and lists</h8>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Master Component: Module<br/>
 						(casePicker.js)</h4> 
 					</h4> 
 					<img src="img/case-picker-JS-datawire.png" width="70%" />
+					</br>
+					<h8>The @wire function fetches and filters data</h8>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Master Component: Module<br/>
 						(casePicker.js)</h4> 
 					</h4> 
 					<img src="img/case-picker-JS-update.png" width="70%" />
-				</section>
+					</br>
+					<h8>Validate, Update and Refresh data on Drop</h8>
+			</section>
 
 				<section data-transition="slide-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h3>Demo LWC...</h3> 
