--- a/index.html
+++ b/index.html
@@ -472,6 +472,8 @@
 						(caseItem.html)</h4> 
 					</h4> 
 					<img src="img/case-item-HTMLCallout.png" draggable="false" width="50%"/>
+					</br>
+					<h8>Set Item Draggable and wire its events</h8>
 				</section>
 				<section data-transition="fade-in fade-out" data-background-image="img/VD2020LogoUpperRight.png">
 					<h4>Draggable Component: Module<br/>
